# QtPropertySerializer

./: .gitignore  CMakeLists.txt  ObjectSerializerQt.h  QtObjectPropertySerializer.cpp  QtObjectPropertySerializer.h  QtPropertySerializer.cpp  QtPropertySerializer.h  README.md  XmlObjectSerializerQt.h
test/: CMakeLists.txt  Person.h  QtPropertySerializerTest.cpp  QtPropertySerializerTest.h  QtPropertySerializerTest.pro  test.cpp  test.h  test.pro  test_ObjectSerializerQt.cpp  test_QtPropertySerializer.cpp  test_QtPropertySerializer.h  test_QtPropertySerializer.pro  test_XmlObjectSerializerQt.cpp
